feat: add Event Entity feat: add lang feat: add error handling feat: add libs
