# app/Models/Event.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class Event extends Model
+{
+    use HasFactory, SoftDeletes;
+
+    protected $fillable = ['name', 'description', 'address', 'date_time'];
+
+    protected function casts(): array
+    {
+        return [
+            'date_time' => 'datetime'
+        ];
+    }
+}
